--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "loginpage",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index",
+  "typings": "src/index",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,7 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "ts-node": "^10.9.1",
     "ts-postgres": "^1.3.0",
     "web-vitals": "^2.1.4"
@@ -28,6 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "ts-node ./server/Server.ts",
     "test": "jest",
     "eject": "react-scripts eject"
   },
@@ -54,7 +57,15 @@
     "@types/node": "^18.13.0",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.4.2",
+    "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
