--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,15 +17,18 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "outDir": "dist",
-    "paths": {
-      "*": ["./node_modules/*", "./src/types/*"]
-    }
+    "noEmit": true
   },
-  "include": ["index.ts", "src/**/*", "server/**/*"],
-  "exclude": ["node_modules",
-  "**/*.spec.ts",
-  "**/*.test.ts"]
+  "include": [
+    "index.ts",
+    "src/**/*",
+    "server/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
