--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.13.0",
+    "@types/pg": "^8.6.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "node-dev": "^8.0.0",
@@ -31,6 +38,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "server": "ts-node ./server/Server.ts",
+    "database-up": "db-migrate up",
     "test": "jest",
     "eject": "react-scripts eject"
   },
@@ -53,11 +61,6 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.13.0",
-    "@types/pg": "^8.6.6",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
     "eslint": "^8.35.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
